不知道各位英语人看到这翻译会怎样呢....

--- a/common/src/main/resources/assets/toneko/lang/en_us.json
+++ b/common/src/main/resources/assets/toneko/lang/en_us.json
@@ -43,6 +43,21 @@
   "quirk.toneko.zako.attack.low": "§cYou look pretty good, you little fry~",
   "quirk.toneko.zako.attack.critical": "§cHey, you are actually going to succeed?",
   "quirk.toneko.zako.attack.dead": "§aGood, good, you are awesome~",
+  "moe.toneko.tsundere": "tsundere",
+  "moe.toneko.baka": "baka",
+  "moe.toneko.mesugaki": "mesugaki",
+  "moe.toneko.yowaki": "yowaki",
+  "moe.toneko.dojikko": "dojikko",
+  "moe.toneko.yandere": "yandere",
+  "moe.toneko.tennen_boke": "tennen_boke",
+  "moe.toneko.haraguro": "haraguro",
+  "moe.toneko.gentleness": "gentleness",
+  "moe.toneko.shoakuma": "shoakuma",
+  "moe.toneko.chunibyo": "chunibyo",
+  "moe.toneko.shizukana": "shizukana",
+  "moe.toneko.narenareshi": "narenareshi",
+  "moe.toneko.paranoia": "paranoia",
+  "moe.toneko.yuri": "lily",
   "key.toneko.lie" : "lie",
   "key.toneko.lie.category": "neko",
   "key.toneko.get_down": "get down",
