--- a/common/src/main/resources/assets/toneko/lang/zh_cn.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_cn.json
@@ -43,6 +43,21 @@
   "quirk.toneko.zako.attack.low": "§c看起来你还挺厉害的嘛，小杂鱼～",
   "quirk.toneko.zako.attack.critical": "§c诶呀，你居然要成功了？",
   "quirk.toneko.zako.attack.dead": "§a好叭好叭，算你厉害～",
+  "moe.toneko.tsundere": "傲娇",
+  "moe.toneko.baka": "笨蛋",
+  "moe.toneko.mesugaki": "雌小鬼",
+  "moe.toneko.yowaki": "弱气",
+  "moe.toneko.dojikko": "冒失",
+  "moe.toneko.yandere": "病娇",
+  "moe.toneko.tennen_boke": "天然呆",
+  "moe.toneko.haraguro": "腹黑",
+  "moe.toneko.gentleness": "温柔",
+  "moe.toneko.shoakuma": "小恶魔",
+  "moe.toneko.chunibyo": "中二病",
+  "moe.toneko.shizukana": "文静",
+  "moe.toneko.narenareshi": "自来熟",
+  "moe.toneko.paranoia": "偏执",
+  "moe.toneko.yuri": "百合",
   "key.toneko.lie" : "躺下",
   "key.toneko.lie.category": "喵喵",
   "key.toneko.get_down": "趴下",
