--- a/common/src/main/resources/assets/toneko/lang/zh_tw.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_tw.json
@@ -43,6 +43,21 @@
   "quirk.toneko.zako.attack.low": "§c看起來你還挺厲害的嘛，小雜魚～",
   "quirk.toneko.zako.attack.critical": "§c哎呀，你居然要成功了？",
   "quirk.toneko.zako.attack.dead": "§a好叭好叭，算你厲害～",
+  "moe.toneko.tsundere": "傲娇",
+  "moe.toneko.baka": "笨蛋",
+  "moe.toneko.mesugaki": "雌小鬼",
+  "moe.toneko.yowaki": "弱气",
+  "moe.toneko.dojikko": "冒失",
+  "moe.toneko.yandere": "病娇",
+  "moe.toneko.tennen_boke": "天然呆",
+  "moe.toneko.haraguro": "腹黑",
+  "moe.toneko.gentleness": "温柔",
+  "moe.toneko.shoakuma": "小恶魔",
+  "moe.toneko.chunibyo": "中二病",
+  "moe.toneko.shizukana": "文静",
+  "moe.toneko.narenareshi": "自来熟",
+  "moe.toneko.paranoia": "偏执",
+  "moe.toneko.yuri": "百合",
   "key.toneko.lie" : "躺下",
   "key.toneko.lie.category": "喵喵",
   "key.toneko.get_down": "趴下",
@@ -90,7 +105,7 @@
   "message.toneko.neko.gift_fail.0": "§e%s §d>> §f雖然我不太喜歡你的禮物，不過還是謝謝喵~",
   "message.toneko.neko.gift_fail.1": "§e%s §d>> §f你的好意我心領了，不過我不太需要喵~",
   "message.toneko.neko.gift_fail.2": "§e%s §d>> §f雖然你很好，不過我不太需要喵~",
-    "message.toneko.neko.gift_full.0": "§e%s §d>> §f咱身上的东西有点太多了喵~",
+  "message.toneko.neko.gift_full.0": "§e%s §d>> §f咱身上的东西有点太多了喵~",
   "message.toneko.neko.gift_full.1": "§e%s §d>> §f真的要塞不下啦",
   "message.toneko.neko.mate.start": "%s 將會與 %s 進行交配，請稍等~",
   "message.toneko.neko.mate.finish": "交配完成！",
@@ -194,6 +209,77 @@
   "screen.toneko.neko_entity_interactive.button.breed": "交配",
   "screen.toneko.neko_entity_interactive.button.breed.des": "讓貓貓和附近的貓貓交配（也可以是你哦）",
   "screen.toneko.mate": "選擇交配對象",
+  "screen.toneko.crystal_neko_interactive.button.who": "你是?",
+  "screen.toneko.crystal_neko_interactive.button.who.des": "來聽聽作者簡短的介紹吧",
+  "screen.toneko.crystal_neko_interactive.button.about_mod": "關於模組",
+  "screen.toneko.crystal_neko_interactive.button.about_mod.des": "聽聽toNeko的一些資訊",
+  "screen.toneko.crystal_neko_interactive.button.plans": "更新計畫",
+  "screen.toneko.crystal_neko_interactive.button.plans.des": "模組未來的更新計畫",
+  "screen.toneko.crystal_neko_interactive.button.links": "相關連結",
+  "screen.toneko.crystal_neko_interactive.button.links.des": "這裡是模組的一些連結哦",
+  "screen.toneko.crystal_neko_interactive.button.interactive": "互動",
+  "screen.toneko.crystal_neko_interactive.button.interactive.des": "像和其它貓貓一樣互動",
+  "screen.toneko.crystal_neko_interactive.button.more": "更多",
+  "screen.toneko.crystal_neko_interactive.button.more.des": "看更多互動喵",
+  "screen.toneko.crystal_neko_more_interactive.button.nya": "喵喵喵",
+  "screen.toneko.crystal_neko_more_interactive.button.nya.des": "喵嗚~",
+  "screen.toneko.links.button.github": "github",
+  "screen.toneko.links.button.github.des": "來看看原始碼喵？點個star也行哦",
+  "screen.toneko.links.button.modrinth": "modrinth",
+  "screen.toneko.links.button.modrinth.des": "這是模組的下載地址喵",
+  "screen.toneko.links.button.discord": "discord",
+  "screen.toneko.links.button.discord.des": "來這裡聊聊天喵",
+  "screen.toneko.links.button.bilibili": "B站",
+  "screen.toneko.links.button.bilibili.des": "這事模組作者的B站帳號哦",
+  "screen.toneko.config.title": "貓貓設定",
+  "screen.toneko.config.button.true": "§a啟用",
+  "screen.toneko.config.button.false": "§c停用",
+  "screen.toneko.config.key.language": "語言",
+  "screen.toneko.config.key.language.des": "可以設定為zh_cn，zh_tw，en_us（只會影響少量文字哦）",
+  "screen.toneko.config.key.chat.enable": "啟用聊天修改",
+  "screen.toneko.config.key.chat.enable.des": "這樣你的聊天就會被修改，如果不喜歡的話呢，就把它關掉吧",
+  "screen.toneko.config.key.chat.format": "聊天格式",
+  "screen.toneko.config.key.chat.format.des": "你可以修改聊天格式,%name%=玩家名稱,%msg%=玩家訊息,%prefix%=前綴",
+  "screen.toneko.config.key.ai.enable": "啟用貓娘AI",
+  "screen.toneko.config.key.ai.enable.des": "你可以在遊戲中與貓娘聊天哦",
+  "screen.toneko.config.key.ai.key": "AI API金鑰",
+  "screen.toneko.config.key.ai.key.des": "Gemini的API金鑰§o(點選可以查看詳細資料)",
+  "screen.toneko.config.key.ai.prompt": "AI提示字",
+  "screen.toneko.config.key.ai.prompt.des": "想必不用咱多說了 Turbo§o(點擊可以查看詳細信息哦)",
+  "screen.toneko.config.key.stats": "啟用貓貓統計",
+  "screen.toneko.config.key.stats.des": "這是貓貓的統計系統",
+  "screen.toneko.config.button.quit": "我改囉",
+  "screen.toneko.config.button.apply": "馬上生效",
+  "screen.toneko.config.button.random": "換一個",
+  "screen.toneko.config.random.0": "我做這個其實只是為了好玩喵",
+  "screen.toneko.config.random.1": "沒有技術，全是情感",
+  "screen.toneko.config.random.2": "螢幕那邊的你一定很可愛吧~^_^~",
+  "screen.toneko.config.random.3": "其實這個模組最開始只是插件來著",
+  "screen.toneko.config.random.4": "喵嗚~",
+  "screen.toneko.config.random.5": "在下CrystalNeko喵~",
+  "screen.toneko.config.random.6": "Ciallo～(∠・ω< )⌒☆",
+  "screen.toneko.config.random.7": "這絕對不是貓貓的問題，絕對不是！",
+  "screen.toneko.config.random.8": "§kIamATextItIsReally",
+  "screen.toneko.config.random.9": "Also try Furry Bohe",
+  "screen.toneko.config.random.10": "雜魚雜魚~",
+  "screen.toneko.config.random.11": "小貓娘，可愛捏~",
+  "screen.toneko.config.random.12": "才...才不是喜歡你呢",
+  "screen.toneko.config.random.13": "§d粉色很好看，不是嗎",
+  "screen.toneko.config.random.14": "我是一隻小貓貓，喵喵喵~",
+  "screen.toneko.config.random.15": "其實遊戲裡貓娘的胸部大小是根據作者的大小設定的哦",
+  "screen.toneko.config.random.16": "我是水貓，喜歡水commit喵",
+  "screen.toneko.config.random.17": "喵嗚...? 喵嗚！ 喵喵喵！",
+  "screen.toneko.config.random.18": "其實/neko指令裡的很多東西都只是為了好玩喵",
+  "screen.toneko.config.random.19": "現在看我以前寫的文案感覺好尷尬喵",
+  "screen.toneko.config.random.20": "Kotlin其實超讚的",
+  "screen.toneko.config.random.21": "rua~",
+  "screen.toneko.config.random.22": "真的好不喜歡冬天，好冷啊喵",
+  "screen.toneko.config.random.23": "最喜歡的季節當然是夏天啦喵",
+  "screen.toneko.config.random.24": "別摸尾巴哦，很敏感的喵",
+  "screen.toneko.config.random.25": "好耶！",
+  "screen.toneko.config.random.26": "(｡･ω･)ﾉﾞ",
+  "screen.toneko.config.random.27": "要讓月亮一直皎潔哦",
+  "screen.toneko.config.random.28": "不要讓不開心的情緒佔據了你的心靈哦，貓貓祝你一直開心",
   "misc.toneko.owner": "主人",
   "misc.toneko.nya": "喵～",
   "misc.toneko.prefix": "§a貓娘"
