--- a/common/src/main/resources/assets/toneko/lang/zh_cn.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_cn.json
@@ -194,6 +194,7 @@
   "advancements.toneko.neko_armor.title": "§a喵喵叫，猫尾巴摇",
   "advancements.toneko.neko_armor.description": "§d穿上猫猫的装备",
   "screen.toneko.quirk": "互动设置",
+  "screen.toneko.neko_entity_interactive.button.chat": "聊天",
   "screen.toneko.neko_entity_interactive.button.gift": "赠送礼物",
   "screen.toneko.neko_entity_interactive.button.gift.des": "把手中的物品赠送给猫猫",
   "screen.toneko.neko_entity_interactive.button.action": "行为",
@@ -210,6 +211,7 @@
   "screen.toneko.neko_entity_interactive.button.breed.des": "让猫猫和附近的猫猫交配（也可以是你哦）",
   "screen.toneko.neko_entity_interactive.tooltip.name": "猫猫の名字：%s",
   "screen.toneko.neko_entity_interactive.tooltip.moe_tags": "猫猫の萌属性：%s",
+  "screen.toneko.chat_with_neko.button.send": "把你的话说给猫猫听",
   "screen.toneko.mate": "选择交配对象",
   "screen.toneko.crystal_neko_interactive.button.who": "你是?",
   "screen.toneko.crystal_neko_interactive.button.who.des": "来听听作者简短的介绍吧",
