--- a/common/src/main/resources/assets/toneko/lang/zh_tw.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_tw.json
@@ -99,6 +99,7 @@
   "messages.toneko.block.add": "§a成功新增屏蔽詞了喵",
   "messages.toneko.notOwner": "§c你不是 %s 的主人喵～",
   "messages.toneko.client.join": "§a小提示：如果聊天欄出現了一堆錯誤代碼，你可以不用管它喔",
+  "messages.toneko.ai.not_enabled": "§c服务器没有开启AI哦",
   "message.toneko.neko.gift_success.0": "§e%s §d>> §f這真的是給我的嗎，太謝謝你了喵~",
   "message.toneko.neko.gift_success.1": "§e%s §d>> §f哇！你對我真好喵，我超喜歡你喵~",
   "message.toneko.neko.gift_success.2": "§e%s §d>> §f我喜歡你的禮物喵~謝謝喵~",
@@ -194,6 +195,8 @@
   "advancements.toneko.neko_armor.title": "§a喵喵叫，貓尾巴搖",
   "advancements.toneko.neko_armor.description": "§d穿上貓貓的裝備",
   "screen.toneko.quirk": "性癖設置",
+  "screen.toneko.neko_entity_interactive.button.chat": "聊天",
+  "screen.toneko.neko_entity_interactive.button.chat.des": "和猫猫愉快的聊天",
   "screen.toneko.neko_entity_interactive.button.gift": "贈送禮物",
   "screen.toneko.neko_entity_interactive.button.gift.des": "把手中的物品贈送給貓貓",
   "screen.toneko.neko_entity_interactive.button.action": "行為",
@@ -208,6 +211,9 @@
   "screen.toneko.neko_entity_interactive.button.get_down.des": "讓貓貓趴下（再按一次就可以起來哦）",
   "screen.toneko.neko_entity_interactive.button.breed": "交配",
   "screen.toneko.neko_entity_interactive.button.breed.des": "讓貓貓和附近的貓貓交配（也可以是你哦）",
+  "screen.toneko.neko_entity_interactive.tooltip.name": "猫猫の名字：%s",
+  "screen.toneko.neko_entity_interactive.tooltip.moe_tags": "猫猫の萌属性：%s",
+  "screen.toneko.chat_with_neko.button.send": "把你的话说给猫猫听",
   "screen.toneko.mate": "選擇交配對象",
   "screen.toneko.crystal_neko_interactive.button.who": "你是?",
   "screen.toneko.crystal_neko_interactive.button.who.des": "來聽聽作者簡短的介紹吧",
@@ -245,7 +251,7 @@
   "screen.toneko.config.key.ai.key": "AI API金鑰",
   "screen.toneko.config.key.ai.key.des": "Gemini的API金鑰§o(點選可以查看詳細資料)",
   "screen.toneko.config.key.ai.prompt": "AI提示字",
-  "screen.toneko.config.key.ai.prompt.des": "想必不用咱多說了 Turbo§o(點擊可以查看詳細信息哦)",
+  "screen.toneko.config.key.ai.prompt.des": "想必不用咱多說了§o(點擊可以查看詳細信息哦)",
   "screen.toneko.config.key.stats": "啟用貓貓統計",
   "screen.toneko.config.key.stats.des": "這是貓貓的統計系統",
   "screen.toneko.config.button.quit": "我改囉",
@@ -282,5 +288,7 @@
   "screen.toneko.config.random.28": "不要讓不開心的情緒佔據了你的心靈哦，貓貓祝你一直開心",
   "misc.toneko.owner": "主人",
   "misc.toneko.nya": "喵～",
-  "misc.toneko.prefix": "§a貓娘"
+  "misc.toneko.prefix": "§a貓娘",
+  "misc.toneko.is_or_not.is": "是",
+  "misc.toneko.is_or_not.not": "不是"
 }
