--- a/common/src/main/resources/assets/toneko/lang/zh_cn.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_cn.json
@@ -196,6 +196,7 @@
   "advancements.toneko.neko_armor.description": "§d穿上猫猫的装备",
   "screen.toneko.quirk": "互动设置",
   "screen.toneko.neko_entity_interactive.button.chat": "聊天",
+  "screen.toneko.neko_entity_interactive.button.chat.des": "和猫猫愉快的聊天",
   "screen.toneko.neko_entity_interactive.button.gift": "赠送礼物",
   "screen.toneko.neko_entity_interactive.button.gift.des": "把手中的物品赠送给猫猫",
   "screen.toneko.neko_entity_interactive.button.action": "行为",
