--- a/common/src/main/resources/assets/toneko/lang/zh_cn.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_cn.json
@@ -130,6 +130,19 @@
   "message.toneko.neko.breed_fail_baby.10": "§c变态！变态！变态！变态！变态！！！",
   "message.toneko.neko.breed_fail_baby.11": "§c你这个变态到底想要干什么啊！",
   "message.toneko.neko.breed_fail_baby.12": "§c你知道这样做的后果吗！！",
+  "message.toneko.neko.breed_fail_zako.0": "§e%s §d>> §f杂鱼，你不配~",
+  "message.toneko.neko.breed_fail_zako.1": "§e%s §d>> §f杂鱼杂鱼~",
+  "message.toneko.neko.breed_fail_zako.2": "§e%s §d>> §f杂鱼变态笨蛋！",
+  "message.toneko.neko.breed_fail_zako.3": "§e%s §d>> §f略略略~",
+  "message.toneko.neko.breed_fail_zako.4": "§e%s §d>> §f你不过是一只杂鱼罢了，我可不想和你交配",
+  "message.toneko.neko.breed_fail_zako.5": "§e%s §d>> §f我可不希望我的孩子会因为你而变得杂鱼，是吧，小杂鱼？",
+  "message.toneko.neko.breed_fail_zako.6": "§e%s §d>> §f真是可笑，你怎么配和我交配啊",
+  "message.toneko.neko.breed_fail_zako.7": "§e%s §d>> §f我可不想和杂鱼交配",
+  "message.toneko.neko.breed_fail_zako.8": "§e%s §d>> §f小杂鱼，你还不够格哦~",
+  "message.toneko.neko.breed_fail_zako.9": "§e%s §d>> §f呐~ 笨蛋，你不可以哦",
+  "message.toneko.neko.breed_success_zako.0": "§e%s §d>> §f好吧，我同意了，但绝对不会有下次",
+  "message.toneko.neko.breed_success_zako.1": "§e%s §d>> §f杂鱼，我就只会和你有这一次，下次别想哦",
+  "message.toneko.neko.breed_success_zako.2": "§e%s §d>> §f这次就先同意了，但下次就不要想了哦",
   "message.toneko.crystal_neko.who.0": "§dCrystal_Neko §e>> §b我是CrystalNeko",
   "message.toneko.crystal_neko.who.1": "§dCrystal_Neko §e>> §b唔... 这个名字有点难记吧...",
   "message.toneko.crystal_neko.who.2": "§dCrystal_Neko §e>> §b不过没关系哒，你其实不用叫我全名哦... 叫我“猫猫”也可以哦",
