完善英语语言文件啦

--- a/common/src/main/resources/assets/toneko/lang/en_us.json
+++ b/common/src/main/resources/assets/toneko/lang/en_us.json
@@ -15,6 +15,11 @@
   "attribute.name.neko.degree": "neko degree",
   "enchantment.toneko.reversion": "Reversion",
   "entity.toneko.adventurer_neko": "Adventurer Neko",
+  "entity.toneko.adventurer_neko.des": "A neko who loves adventure",
+  "entity.toneko.crystal_neko": "Crystal_Neko",
+  "entity.toneko.crystal_neko.ded": "Crystal_Neko",
+  "entity.toneko.ghost_neko": "Ghost neko",
+  "entity.toneko.ghost_neko.des": "A neko in ghost form, ignoring gravity, can pass through walls and fly, but can interact with creatures",
   "quirk.toneko.caress": "caress",
   "quirk.toneko.caress.des": "You like to be touched",
   "quirk.toneko.caress.use": "§dYou gently stroked %s.",
@@ -130,6 +135,19 @@
   "message.toneko.neko.breed_fail_baby.10": "§cHentai! Hentai! Hentai! Hentai! Hentai!!!",
   "message.toneko.neko.breed_fail_baby.11": "§cWhat on earth do you want to do, Hentai!",
   "message.toneko.neko.breed_fail_baby.12": "§cDo you know the consequences of doing this!!",
+  "message.toneko.neko.breed_fail_zako.0": "§e%s §d>> §fZako，You~don't~deserve~it~",
+  "message.toneko.neko.breed_fail_zako.1": "§e%s §d>> §fZako,zako~",
+  "message.toneko.neko.breed_fail_zako.2": "§e%s §d>> §fZako,baka,hentai！",
+  "message.toneko.neko.breed_fail_zako.3": "§e%s §d>> §flue lue lue~",
+  "message.toneko.neko.breed_fail_zako.4": "§e%s §d>> §fYou are just a zako, I don't want to mate with you!",
+  "message.toneko.neko.breed_fail_zako.5": "§e%s §d>> §fI don't wish that my kid will be zako like you，right?Zako!",
+  "message.toneko.neko.breed_fail_zako.6": "§e%s §d>> §fAre you kidding? You are not strange enough to mate with me~",
+  "message.toneko.neko.breed_fail_zako.7": "§e%s §d>> §fI don't want to mate with a zako.",
+  "message.toneko.neko.breed_fail_zako.8": "§e%s §d>> §fZako，You're not qualified yet~",
+  "message.toneko.neko.breed_fail_zako.9": "§e%s §d>> §fNa~ baka，you can't~",
+  "message.toneko.neko.breed_success_zako.0": "§e%s §d>> §fOk, I agree. But no next time.",
+  "message.toneko.neko.breed_success_zako.1": "§e%s §d>> §fZako, I only do it at once... No... No next time.",
+  "message.toneko.neko.breed_success_zako.2": "§e%s §d>> §fI agree. But don't think of it again!",
   "message.toneko.crystal_neko.who.0": "§dCrystal_Neko §e>> §bI am CrystalNeko",
   "message.toneko.crystal_neko.who.1": "§dCrystal_Neko §e>> §bHmm... This name is a little hard to remember...",
   "message.toneko.crystal_neko.who.2": "§dCrystal_Neko §e>> §bBut it doesn't matter，you don't have to call me full name... Call me any alias if you like.",
@@ -290,5 +308,9 @@
   "misc.toneko.nya": "meow~",
   "misc.toneko.prefix": "§aneko",
   "misc.toneko.is_or_not.is": "is",
-  "misc.toneko.is_or_not.not": "isn't"
+  "misc.toneko.is_or_not.not": "isn't",
+  "misc.toneko.time.day": "daytime",
+  "misc.toneko.time.night": "night",
+  "misc.toneko.weather.rain": "raining",
+  "misc.toneko.weather.sunny": "sunny"
 }
