--- a/common/src/main/resources/assets/toneko/lang/zh_tw.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_tw.json
@@ -15,6 +15,11 @@
   "attribute.name.neko.degree": "貓貓等級",
   "enchantment.toneko.reversion": "反轉",
   "entity.toneko.adventurer_neko": "冒險家貓娘",
+  "entity.toneko.adventurer_neko.des": "热爱冒险的猫娘",
+  "entity.toneko.crystal_neko": "Crystal_Neko",
+  "entity.toneko.crystal_neko.ded": "Crystal_Neko",
+  "entity.toneko.ghost_neko": "幽灵猫娘",
+  "entity.toneko.ghost_neko.des": "幽灵形态的猫娘，无视重力，可以穿墙与飞行，但可以与生物交互",
   "quirk.toneko.caress": "撫摸",
   "quirk.toneko.caress.des": "你喜歡被摸摸",
   "quirk.toneko.caress.use": "§d你輕輕撫摸了 %s §d喵～",
@@ -130,6 +135,19 @@
   "message.toneko.neko.breed_fail_baby.10": "§c變態！變態！變態！變態！變態！！！",
   "message.toneko.neko.breed_fail_baby.11": "§c你這個變態到底想要幹什麼啊！",
   "message.toneko.neko.breed_fail_baby.12": "§c你知道這樣做的後果嗎！！",
+  "message.toneko.neko.breed_fail_zako.0": "§e%s §d>> §f杂鱼，你不配~",
+  "message.toneko.neko.breed_fail_zako.1": "§e%s §d>> §f杂鱼杂鱼~",
+  "message.toneko.neko.breed_fail_zako.2": "§e%s §d>> §f杂鱼变态笨蛋！",
+  "message.toneko.neko.breed_fail_zako.3": "§e%s §d>> §f略略略~",
+  "message.toneko.neko.breed_fail_zako.4": "§e%s §d>> §f你不过是一只杂鱼罢了，我可不想和你交配",
+  "message.toneko.neko.breed_fail_zako.5": "§e%s §d>> §f我可不希望我的孩子会因为你而变得杂鱼，是吧，小杂鱼？",
+  "message.toneko.neko.breed_fail_zako.6": "§e%s §d>> §f真是可笑，你怎么配和我交配啊",
+  "message.toneko.neko.breed_fail_zako.7": "§e%s §d>> §f我可不想和杂鱼交配",
+  "message.toneko.neko.breed_fail_zako.8": "§e%s §d>> §f小杂鱼，你还不够格哦~",
+  "message.toneko.neko.breed_fail_zako.9": "§e%s §d>> §f呐~ 笨蛋，你不可以哦",
+  "message.toneko.neko.breed_success_zako.0": "§e%s §d>> §f好吧，我同意了，但绝对不会有下次",
+  "message.toneko.neko.breed_success_zako.1": "§e%s §d>> §f杂鱼，我就只会和你有这一次，下次别想哦",
+  "message.toneko.neko.breed_success_zako.2": "§e%s §d>> §f这次就先同意了，但下次就不要想了哦",
   "message.toneko.crystal_neko.who.0": "§dCrystal_Neko §e>> §b我是CrystalNeko",
   "message.toneko.crystal_neko.who.1": "§dCrystal_Neko §e>> §b唔... 这个名字有点难记吧...",
   "message.toneko.crystal_neko.who.2": "§dCrystal_Neko §e>> §b不过没关系哒，你其实不用叫我全名哦... 叫我“猫猫”也可以哦",
@@ -290,5 +308,9 @@
   "misc.toneko.nya": "喵～",
   "misc.toneko.prefix": "§a貓娘",
   "misc.toneko.is_or_not.is": "是",
-  "misc.toneko.is_or_not.not": "不是"
+  "misc.toneko.is_or_not.not": "不是",
+  "misc.toneko.time.day": "白天",
+  "misc.toneko.time.night": "晚上",
+  "misc.toneko.weather.rain": "雨天",
+  "misc.toneko.weather.sunny": "晴天"
 }
