--- a/common/src/main/resources/assets/toneko/lang/zh_tw.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_tw.json
@@ -113,8 +113,6 @@
   "message.toneko.neko.gift_fail.2": "§e%s §d>> §f雖然你很好，不過我不太需要喵~",
   "message.toneko.neko.gift_full.0": "§e%s §d>> §f咱身上的东西有点太多了喵~",
   "message.toneko.neko.gift_full.1": "§e%s §d>> §f真的要塞不下啦",
-  "message.toneko.neko.mate.start": "%s 將會與 %s 進行交配，請稍等~",
-  "message.toneko.neko.mate.finish": "交配完成！",
   "message.toneko.neko.on_hurt.0": "§e%s §d>> §f你好坏！",
   "message.toneko.neko.on_hurt.1": "§e%s §d>> §f我讨厌你！",
   "message.toneko.neko.on_hurt.2": "§e%s §d>> §f你...你这么可以这样！！",
@@ -122,6 +120,9 @@
   "message.toneko.neko.on_hurt.4": "§e%s §d>> §f你...你太坏了！",
   "message.toneko.neko.on_hurt.5": "§e%s §d>> §f大坏蛋！",
   "message.toneko.neko.die.no_item_drop": "§c你太坏了，东西不还给你了，哼！",
+  "message.toneko.neko.mate.start": "%s 將會與 %s 進行交配，請稍等~",
+  "message.toneko.neko.mate.fail": "%c 好像失败了呢",
+  "message.toneko.neko.mate.finish": "交配完成！",
   "message.toneko.neko.breed_fail_baby.0": "§c你的想法有點危險!",
   "message.toneko.neko.breed_fail_baby.1": "§c請停止你的行為!",
   "message.toneko.neko.breed_fail_baby.2": "§c你清楚你要幹什麼嗎?",
