--- a/common/src/main/resources/assets/toneko/lang/zh_tw.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_tw.json
@@ -121,7 +121,7 @@
   "message.toneko.neko.on_hurt.5": "§e%s §d>> §f大坏蛋！",
   "message.toneko.neko.die.no_item_drop": "§c你太坏了，东西不还给你了，哼！",
   "message.toneko.neko.mate.start": "%s 將會與 %s 進行交配，請稍等~",
-  "message.toneko.neko.mate.fail": "%c 好像失败了呢",
+  "message.toneko.neko.mate.fail": "§c 好像失败了呢",
   "message.toneko.neko.mate.finish": "交配完成！",
   "message.toneko.neko.breed_fail_baby.0": "§c你的想法有點危險!",
   "message.toneko.neko.breed_fail_baby.1": "§c請停止你的行為!",
