终于做好惹

--- a/common/src/main/resources/assets/toneko/lang/zh_tw.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_tw.json
@@ -305,6 +305,7 @@
   "screen.toneko.config.random.26": "(｡･ω･)ﾉﾞ",
   "screen.toneko.config.random.27": "要讓月亮一直皎潔哦",
   "screen.toneko.config.random.28": "不要讓不開心的情緒佔據了你的心靈哦，貓貓祝你一直開心",
+  "gui.back.des": "不用解释你也知道是什么意思叭",
   "misc.toneko.owner": "主人",
   "misc.toneko.nya": "喵～",
   "misc.toneko.prefix": "§a貓娘",
