--- a/common/src/main/resources/assets/toneko/lang/en_us.json
+++ b/common/src/main/resources/assets/toneko/lang/en_us.json
@@ -86,7 +86,9 @@
   "command.tonekoadmin.skin.list": "§bAll neko skins are here:\n %s",
   "command.tonekoadmin.skin.add": "§aSuccessfully added %s §a skins meow",
   "command.tonekoadmin.skin.remove": "§aSuccessfully deleted %s §a skins meow",
-  "command.tonekoadmin.help": "§b/tonekoadmin help:\n§a/tonekoadmin help §bget help\n§a/tonekoadmin set <player> §bSet player to neko or unset\n§a/tonekoadmin reload §bReload the config and language",
+  "command.tonekoadmin.data.loaded_count": "§aThe amount of neko data currently loaded: %s",
+  "command.tonekoadmin.data.all_count": "§aThe total amount of neko data: %s",
+  "command.tonekoadmin.help": "§b/tonekoadmin help:\n§a/tonekoadmin help §bget help\n§a/tonekoadmin set <player> §bSet player to neko or unset\n§a/tonekoadmin reload §bReload the config and language\n§a/tonekoadmin data §bAbout data",
   "command.neko.help": "§b/neko getHelp(These commands only for neko):\n§a/neko jump §bJump higher!\n§a/neko vision §bDo you want to see clearly as a neko at night?\n§a/neko speed §bToo quickly(>_<)\n§a/neko lie §bLie down and rest for a while\n§a/neko nickname <nickname> §bSet a cute nickname\n§a/neko level §bShow your neko level\n§a/neko lore <lore> §bSet a cute lore for your item in hand.",
   "command.neko.not_neko": "§cYou are not a neko",
   "command.neko.nickname.success": "§aYour nickname is %s §a now",
