--- a/common/src/main/resources/assets/toneko/lang/zh_tw.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_tw.json
@@ -88,6 +88,7 @@
   "command.tonekoadmin.skin.remove": "§a成功刪除了 %s §a的皮膚了喵",
   "command.tonekoadmin.data.loaded_count": "§a当前已经加载的猫娘数据量：%s",
   "command.tonekoadmin.data.all_count": "§a一共的猫娘数据量：%s",
+  "command.tonekoadmin.data.delete_rubbish": "§a成功删除了%s个垃圾数据了喵，消耗了%s秒~",
   "command.tonekoadmin.help": "§b/tonekoadmin 幫助：\n§a/tonekoadmin help §b取得幫助\n§a/tonekoadmin set <玩家名稱> §b將玩家設定為貓娘或取消設定\n§a/tonekoadmin reload §b重新載入設定檔和語言檔案\n§a/tonekoadmin data §b数据相",
   "command.neko.help": "§b/neko 幫助（注意喔，這些指令都是貓貓專有的喔）：\n§a/neko jump §b跳得更高！\n§a/neko vision §b想和貓貓一樣在夜晚看得更清楚嗎\n§a/neko speed §b太快啦 (>_<)\n§a/neko lie §b躺下來休息會吧\n§a/neko nickname <暱稱> §b設定一個可愛的暱稱吧\n§a/neko level §b看看你的貓貓等級\n§a/neko lore <描述> §b給你手中的物品設定一個可愛的描述吧",
   "command.neko.not_neko": "§c你並不是一隻貓貓喔",
