--- a/common/src/main/resources/assets/toneko/lang/en_us.json
+++ b/common/src/main/resources/assets/toneko/lang/en_us.json
@@ -310,7 +310,7 @@
   "screen.toneko.config.random.28": "Don't let unhappy emotions occupy your heart, neko wishes you happiness forever",
   "gui.back.des": "I guess you know the meaning",
   "misc.toneko.owner": "owner",
-  "misc.toneko.nya": "meow~",
+  "misc.toneko.nya": "meow",
   "misc.toneko.prefix": "§aneko",
   "misc.toneko.is_or_not.is": "is",
   "misc.toneko.is_or_not.not": "isn't",
