--- a/common/src/main/resources/assets/toneko/lang/zh_cn.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_cn.json
@@ -310,7 +310,7 @@
   "screen.toneko.config.random.28": "不要让不开心的情绪占据了你的心灵哦，猫猫祝你一直开心",
   "gui.back.des": "不用解释你也知道是什么意思叭",
   "misc.toneko.owner": "主人",
-  "misc.toneko.nya": "喵~",
+  "misc.toneko.nya": "喵",
   "misc.toneko.prefix": "§a猫娘",
   "misc.toneko.is_or_not.is": "是",
   "misc.toneko.is_or_not.not": "不是",
