--- a/common/src/main/resources/assets/toneko/lang/zh_tw.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_tw.json
@@ -310,7 +310,7 @@
   "screen.toneko.config.random.28": "不要讓不開心的情緒佔據了你的心靈哦，貓貓祝你一直開心",
   "gui.back.des": "不用解释你也知道是什么意思叭",
   "misc.toneko.owner": "主人",
-  "misc.toneko.nya": "喵～",
+  "misc.toneko.nya": "喵",
   "misc.toneko.prefix": "§a貓娘",
   "misc.toneko.is_or_not.is": "是",
   "misc.toneko.is_or_not.not": "不是",
