添加猫薄荷三明治

--- a/common/src/main/resources/assets/toneko/lang/en_us.json
+++ b/common/src/main/resources/assets/toneko/lang/en_us.json
@@ -7,7 +7,9 @@
   "item.toneko.furry_bohe": "Furry Bohe",
   "item.toneko.furry_bohe.info": "Also try Furry Bohe",
   "item.toneko.adventurer_neko_spawn_egg": "Adventurer Neko Spawn",
+  "item.toneko.ghost_neko_spawn_egg": "Ghost Neko Spawn",
   "item.toneko.catnip": "Catnip",
+  "item.toneko.catnip_sandwich": "Catnip Sandwich",
   "item.toneko.catnip_seed": "Catnip Seed",
   "block.toneko.catnip": "Catnip",
   "effect.toneko.exciting": "Exciting",
