--- a/common/src/main/resources/assets/toneko/lang/zh_cn.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_cn.json
@@ -7,7 +7,9 @@
   "item.toneko.furry_bohe": "兽薄荷",
   "item.toneko.furry_bohe.info": "§aAlso try Furry Bohe",
   "item.toneko.adventurer_neko_spawn_egg": "冒险家猫娘生成",
+  "item.toneko.ghost_neko_spawn_egg": "幽灵猫娘生成",
   "item.toneko.catnip": "猫薄荷",
+  "item.toneko.catnip_sandwich": "猫薄荷三明治",
   "item.toneko.catnip_seed": "猫薄荷种子",
   "block.toneko.catnip": "猫薄荷",
   "effect.toneko.exciting": "兴奋",
