--- a/common/src/main/resources/assets/toneko/lang/en_us.json
+++ b/common/src/main/resources/assets/toneko/lang/en_us.json
@@ -70,6 +70,9 @@
   "key.toneko.get_down": "get down",
   "key.toneko.ride": "try a ride",
   "key.toneko.quirk": "open quirk GUI",
+  "key.toneko.speed": "Get speed boost",
+  "key.toneko.jump": "Get jump boost",
+  "key.toneko.vision": "Get night vision",
   "command.toneko.not_player": "§cOnly player can be command executor",
   "command.toneko.not_found": "§cUnable to find the player.",
   "command.toneko.player.success": "§aYou become §6%s §a's owner now-nya",
@@ -218,6 +221,12 @@
   "advancements.toneko.got_neko_potion.description": "§dGet neko potion",
   "advancements.toneko.neko_armor.title": "§aMeow, neko tails wag",
   "advancements.toneko.neko_armor.description": "§dWear neko gear",
+  "advancements.toneko.catnip.title": "§aExciting!",
+  "advancements.toneko.catnip.description": "§dGet catnip!",
+  "advancements.toneko.catnip.first_gif.title": "§aHeartfelt First Offering",
+  "advancements.toneko.catnip.first_gif.description": "§dPresent a gift to a neko",
+  "advancements.toneko.neko_lv100.title": "§aNeko LV100",
+  "advancements.toneko.neko_lv100.description": "§dRaise the neko level to above level 100",
   "screen.toneko.quirk": "Quirk Settings",
   "screen.toneko.neko_entity_interactive.button.chat": "Chat",
   "screen.toneko.neko_entity_interactive.button.chat.des": "Chat with Neko",
