--- a/common/src/main/resources/assets/toneko/lang/zh_cn.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_cn.json
@@ -70,6 +70,9 @@
   "key.toneko.get_down": "趴下",
   "key.toneko.ride": "尝试乘骑",
   "key.toneko.quirk": "打开XP界面",
+  "key.toneko.speed": "获取速度提升",
+  "key.toneko.jump": "获取跳跃提升",
+  "key.toneko.vision": "获取夜视",
   "command.toneko.not_player": "§c命令执行者只能是玩家哦",
   "command.toneko.not_found": "§c没找到这个玩家哦",
   "command.toneko.player.success": "§a你现在成为了 §6%s §a的主人喵~",
@@ -218,6 +221,12 @@
   "advancements.toneko.got_neko_potion.description": "§d获取猫娘药水",
   "advancements.toneko.neko_armor.title": "§a喵喵叫，猫尾巴摇",
   "advancements.toneko.neko_armor.description": "§d穿上猫猫的装备",
+  "advancements.toneko.catnip.title": "§a兴奋",
+  "advancements.toneko.catnip.description": "§d获得猫薄荷",
+  "advancements.toneko.catnip.first_gif.title": "§a初献心意",
+  "advancements.toneko.catnip.first_gif.description": "§d给一只猫娘送礼",
+  "advancements.toneko.neko_lv100.title": "§a猫猫100级",
+  "advancements.toneko.neko_lv100.description": "§d把猫猫等级提升到100级以上",
   "screen.toneko.quirk": "互动设置",
   "screen.toneko.neko_entity_interactive.button.chat": "聊天",
   "screen.toneko.neko_entity_interactive.button.chat.des": "和猫猫愉快的聊天",
