--- a/common/src/main/resources/assets/toneko/lang/zh_tw.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_tw.json
@@ -70,6 +70,9 @@
   "key.toneko.get_down": "趴下",
   "key.toneko.ride": "嘗試乘騎",
   "key.toneko.quirk": "打開性癖界面",
+  "key.toneko.speed": "获取速度提升",
+  "key.toneko.jump": "获取跳跃提升",
+  "key.toneko.vision": "获取夜视",
   "command.toneko.not_player": "§c指令執行者只能是玩家喔",
   "command.toneko.not_found": "§c沒找到這個玩家喔",
   "command.toneko.player.success": "§a你現在成為了 §6%s §a的主人喵～",
@@ -218,6 +221,12 @@
   "advancements.toneko.got_neko_potion.description": "§d取得貓娘藥水",
   "advancements.toneko.neko_armor.title": "§a喵喵叫，貓尾巴搖",
   "advancements.toneko.neko_armor.description": "§d穿上貓貓的裝備",
+  "advancements.toneko.catnip.title": "§a兴奋!",
+  "advancements.toneko.catnip.description": "§d获得猫薄荷!",
+  "advancements.toneko.catnip.first_gif.title": "§a初献心意",
+  "advancements.toneko.catnip.first_gif.description": "§d给一只猫娘送礼",
+  "advancements.toneko.neko_lv100.title": "§a猫猫100级",
+  "advancements.toneko.neko_lv100.description": "§d把猫猫等级提升到100级以上",
   "screen.toneko.quirk": "性癖設置",
   "screen.toneko.neko_entity_interactive.button.chat": "聊天",
   "screen.toneko.neko_entity_interactive.button.chat.des": "和猫猫愉快的聊天",
