--- a/common/src/main/resources/assets/toneko/lang/zh_cn.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_cn.json
@@ -223,8 +223,8 @@
   "advancements.toneko.neko_armor.description": "§d穿上猫猫的装备",
   "advancements.toneko.catnip.title": "§a兴奋",
   "advancements.toneko.catnip.description": "§d获得猫薄荷",
-  "advancements.toneko.catnip.first_gif.title": "§a初献心意",
-  "advancements.toneko.catnip.first_gif.description": "§d给一只猫娘送礼",
+  "advancements.toneko.first_gift.title": "§a初献心意",
+  "advancements.toneko.first_gift.description": "§d给一只猫娘送礼",
   "advancements.toneko.neko_lv100.title": "§a猫猫100级",
   "advancements.toneko.neko_lv100.description": "§d把猫猫等级提升到100级以上",
   "screen.toneko.quirk": "互动设置",
