--- a/common/src/main/resources/assets/toneko/lang/en_us.json
+++ b/common/src/main/resources/assets/toneko/lang/en_us.json
@@ -223,8 +223,8 @@
   "advancements.toneko.neko_armor.description": "§dWear neko gear",
   "advancements.toneko.catnip.title": "§aExciting!",
   "advancements.toneko.catnip.description": "§dGet catnip!",
-  "advancements.toneko.catnip.first_gif.title": "§aHeartfelt First Offering",
-  "advancements.toneko.catnip.first_gif.description": "§dPresent a gift to a neko",
+  "advancements.toneko.first_gift.title": "§aHeartfelt First Offering",
+  "advancements.toneko.first_gift.description": "§dPresent a gift to a neko",
   "advancements.toneko.neko_lv100.title": "§aNeko LV100",
   "advancements.toneko.neko_lv100.description": "§dRaise the neko level to above level 100",
   "screen.toneko.quirk": "Quirk Settings",
