支持猫娘&玩家产奶

--- a/common/src/main/resources/assets/toneko/lang/zh_cn.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_cn.json
@@ -1,4 +1,5 @@
 {
+  "item.minecraft.milk_bucket.source": "§r§d由%s生产",
   "item.toneko.neko_potion.effect.empty": "猫娘药水",
   "item.toneko.neko_tail": "猫尾巴",
   "item.toneko.neko_ears": "猫耳朵",
