--- a/common/src/main/resources/assets/toneko/lang/en_us.json
+++ b/common/src/main/resources/assets/toneko/lang/en_us.json
@@ -1,4 +1,5 @@
 {
+  "item.minecraft.milk_bucket.source": "§r§dProduced by %s",
   "item.toneko.neko_potion.effect.empty": "Neko Potion",
   "item.toneko.neko_tail": "Neko Tail",
   "item.toneko.neko_ears": "Neko ears",
